# kronos

./: .biomelintrc-auto-import.json  .eslintrc-auto-import.json  .gitignore  README.md  app.config.ts  auto-imports.d.ts  bun.lockb  components.json  package.json  tailwind.config.cjs  tsconfig.json  ui.config.json
docs/: CHANGELOG.md  overview.md  technical-overview.md
docs/architecture/: OVERVIEW.md
docs/features/: README.md  editor.md
docs/features/editor/1_problem/: definition.md
src/: app.tsx  bindings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src/components/: app-sidebar.tsx  header.tsx  journal-calendar.tsx  nav-user.tsx  toast.ts
src/components/editor/: index.tsx  theme.ts
src/components/metadata-editor/: index.tsx
src/components/ui/: avatar.tsx  breadcrumb.tsx  button.tsx  command.tsx  date-picker.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  sidebar.tsx  skeleton.tsx  slot.tsx
src/composables/: useJournal.tsx
src/hooks/: use-mobile.tsx
src/lib/file-system/: kronospheres.ts  notes.ts
src/routes/: index.tsx
src/routes/(app)/: index.tsx  journal.tsx
src/routes/kronosphere/: (kronosphere).tsx  index.tsx
src/store/: journal-store.ts
src/stores/: journal-store.ts
src/types/: note.ts  task.ts
